use different method to parse assets path